@@ -1,3 +1,9 @@
+2008-04-27  Guillem Jover  <guillem.jover@nokia.com>
+
+	* launcher/report.h (enum report_type): Add report_warning.
+	(warning): New macro.
+	* launcher/report.c (vreport): Handle report_warning.
+
 2008-04-23  Guillem Jover  <guillem.jover@nokia.com>
 
 	* launcher/launcher.c (store_state): Call comm_msg_destroy.
